[gd_scene load_steps=2 format=3 uid="uid://f4m7p9q1r6stu"]

[ext_resource type="Script" path="res://scripts/ui/highscore_entry.gd" id="1_highscore_entry"]

[node name="HighscoreEntry" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_highscore_entry")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="NewHighScoreLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "NEW HIGH SCORE!"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "SCORE: 0"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="EnterInitialsLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "ENTER YOUR INITIALS"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="InitialsLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "___"
horizontal_alignment = 1

[node name="Spacer4" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="InstructionsLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "PRESS ENTER TO CONFIRM"
horizontal_alignment = 1
